--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "start:day2": "npm run build && node dist/day2/index.js",
     "test:day2": "jest day2/index.test.ts",
     "start:day3": "npm run build && node dist/day3/index.js",
-    "test:day3": "jest day3/index.test.ts"
+    "test:day3": "jest day3/index.test.ts",
+    "start:day4": "npm run build && node dist/day4/index.js && cp day4/input.txt dist/day4/ 2>/dev/null || true",
+    "test:day4": "jest day4/index.test.ts"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
