--- a/package.json
+++ b/package.json
@@ -26,8 +26,24 @@
     "test:day2": "jest day2/index.test.ts",
     "start:day3": "npm run build && node dist/day3/index.js",
     "test:day3": "jest day3/index.test.ts",
-    "start:day4": "npm run build && node dist/day4/index.js && cp day4/input.txt dist/day4/ 2>/dev/null || true",
-    "test:day4": "jest day4/index.test.ts"
+    "start:day4": "cp day4/input.txt dist/day4/ 2>/dev/null || true && npm run build && node dist/day4/index.js",
+    "test:day4": "jest day4/index.test.ts",
+    "start:day5": "cp day5/input.txt dist/day5/ 2>/dev/null || true && npm run build && node dist/day5/index.js",
+    "test:day5": "jest day5/index.test.ts",
+    "start:day6": "npm run build && node dist/day6/index.js",
+    "test:day6": "jest day6/index.test.ts",
+    "start:day7": "npm run build && node dist/day7/index.js",
+    "test:day7": "jest day7/index.test.ts",
+    "start:day8": "npm run build && node dist/day8/index.js",
+    "test:day8": "jest day8/index.test.ts",
+    "start:day9": "npm run build && node dist/day9/index.js",
+    "test:day9": "jest day9/index.test.ts",
+    "start:day10": "npm run build && node dist/day10/index.js",
+    "test:day10": "jest day10/index.test.ts",
+    "start:day11": "npm run build && node dist/day11/index.js",
+    "test:day11": "jest day11/index.test.ts",
+    "start:day12": "npm run build && node dist/day12/index.js",
+    "test:day12": "jest day12/index.test.ts"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
