--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:day4": "jest day4/index.test.ts",
     "start:day5": "cp day5/input.txt dist/day5/ 2>/dev/null || true && npm run build && node dist/day5/index.js",
     "test:day5": "jest day5/index.test.ts",
-    "start:day6": "npm run build && node dist/day6/index.js",
+    "start:day6": "cp day6/input.txt dist/day6/ 2>/dev/null || true && npm run build && node dist/day6/index.js",
     "test:day6": "jest day6/index.test.ts",
     "start:day7": "npm run build && node dist/day7/index.js",
     "test:day7": "jest day7/index.test.ts",
